# disk_cleaner

./: .gitignore  LICENSE  README.md  __init__.py  analyzer.py  duplicate_finder.py  file_operations.py  main.py  pyproject.toml  requirements.txt  run_tests.py  scanner.py  smart_analysis.py  theme_manager.py  utils.py
.claude/: CLAUDE.md
tests/: __init__.py  conftest.py  test_analyzer.py  test_duplicate_finder.py  test_scanner.py  test_size_parsing.py  test_smart_analysis.py  test_utils.py
ui/: __init__.py  dialogs.py  duplicate_view.py  file_table.py  main_window.py  preview_pane.py  smart_analysis_view.py  visualizations.py
